[SNAPSHOT]
- BREAKING: Added generic methods "addEffect" to BoomChannel, and removed specialized ones such as "addReverb".
- BREAKING: Removed sourceGain and sourceCutoff from BoomChannel in favor of the new Filter class, which has the same functionality and some more.
- Added Filters to channels and effects, which are created automatically in both cases.
- Channels can have two effects at once instead of just one.
- Improved error handling after all sensitive OpenAL calls.
- Added new effects: Auto Wah, Chorus, Compressor, Flanger, Pitch Shifter, Ring Modulator, and Vocal Morpher.
- Volume, pitch, and pan values are now clamped to a safe and functional range in Boom.play and Boom.loop methods to avoid a cascade of OpenAL errors.
- Updated libGDX from 1.9.11 to 1.11.0.