@@ -6,4 +6,5 @@
 - Improved error handling after all sensitive OpenAL calls.
 - Added new effects: Auto Wah, Chorus, Compressor, Flanger, Pitch Shifter, Ring Modulator, and Vocal Morpher.
 - Volume, pitch, and pan values are now clamped to a safe and functional range in Boom.play and Boom.loop methods to avoid a cascade of OpenAL errors.
+- Added updateSoundToChannel method that updates a Sound ID with the current state of the given channel. Must be called manually.
 - Updated libGDX from 1.9.11 to 1.11.0.
